# polystack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example_custom_learner.ipynb  tutorial.ipynb
src/polystack/: __init__.py  crossval.py  estimator.py  meta_features.py
tests/: requirements.txt  test_polystack_crossval.py  test_polystack_model.py
