[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polystack"
version = "0.1.0"
description = "Rewritten multiview stacking algorithm with enhancements."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Enrique Garcia-Ceja", email = "e.g.mx@ieee.org" },
  { name = "Kaled Corona-Romero", email = "mailme_git@kaco.slmail.me" }
]
keywords = ["multiview", "machine learning", "classification", "multimodal"]
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "scikit-learn"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kaledcorona/polystack"
Repository = "https://github.com/kaledcorona/polystack"
Issues     = "https://github.com/kaledcorona/polystack/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["polystack*"]

# include the type marker and any data files you want shipped
[tool.setuptools.package-data]
polystack = ["py.typed", "data/*.*"]

[tool.mypy]
python_version = "3.11"
strict = true
follow_imports = "silent"
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
mypy_path = "src"
exclude = ["^tests/.*$", "^examples/.*$"]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E","F","W","I","N","UP"]
ignore = ["E501"]
target-version = "py39"


[tool.ruff.isort]
known-first-party = ["polystack"]


[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "scikit-learn", "numpy", "pandas"]
